<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/ActivityHome_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />
    <Button
        android:id="@+id/ActivityHome_buttonRandomJokes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ActivityHome_buttonTextInput"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_randomJoke" />

    <Button

        android:id="@+id/ActivityHome_buttonTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/lbl_changeTheName"
         />

    <Button
        android:id="@+id/ActivityHome_buttonNeverEndingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ActivityHome_buttonTextInput"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_neverEndingList" />



</RelativeLayout>
